--- a/secret-templates/couchdb-secrets.yaml
+++ b/secret-templates/couchdb-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cluster-admin
+  name: couchdb-cluster-admin
   namespace: default
 type: Opaque
 data:
