--- a/secret-templates/couchdb-secrets.yaml
+++ b/secret-templates/couchdb-secrets.yaml
@@ -3,6 +3,14 @@ kind: Secret
 metadata:
   name: couchdb-cluster-admin
   namespace: default
+  labels:
+    app: couchdb
+    component: couchdb
+    role: member
+    release: stable      # canary
+    environment: staging # dev, qa, production
+    tier: database       # frontend, backend, cache
+    partition: all       # customer_1, customer_2, developer_1, beta_release
 type: Opaque
 data:
   # echo -n 'admin' | base64
