--- a/catalog/couchdb/kubernetes/couchdb-headless-service.yaml
+++ b/catalog/couchdb/kubernetes/couchdb-headless-service.yaml
@@ -4,6 +4,12 @@ kind: Service
 metadata:
   labels:
     app: couchdb
+    component: couchdb
+    role: discovery
+    release: stable      # canary
+    environment: staging # dev, qa, production
+    tier: database       # frontend, backend, cache
+    partition: all       # customer_1, customer_2, developer_1, beta_release
   name: couchdb
   namespace: default
 spec:
