--- a/catalog/elk/kubernetes/es-client-statefulset.yaml
+++ b/catalog/elk/kubernetes/es-client-statefulset.yaml
@@ -2,17 +2,19 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: es-client
-  labels:
-    component: elasticsearch
-    role: client
 spec:
   serviceName: es-client
   replicas: 2
   template:
     metadata:
       labels:
+        app: elk
         component: elasticsearch
         role: client
+        release: stable      # canary
+        environment: staging # dev, qa, production
+        tier: database       # frontend, backend, cache
+        partition: all       # customer_1, customer_2, developer_1, beta_release
       annotations:
         pod.beta.kubernetes.io/init-containers: '[
           {
@@ -33,7 +35,7 @@ spec:
           capabilities:
             add:
               - IPC_LOCK
-        image: hbouvier/docker-elasticsearch-kubernetes:5.2.0
+        image: hbouvier/elasticsearch-kubernetes:5.2.0
         imagePullPolicy: Always
         env:
         - name: NAMESPACE
