--- a/catalog/elk/kubernetes/es-discovery-svc.yaml
+++ b/catalog/elk/kubernetes/es-discovery-svc.yaml
@@ -3,8 +3,13 @@ kind: Service
 metadata:
   name: elasticsearch-discovery
   labels:
+    app: elk
     component: elasticsearch
     role: master
+    release: stable      # canary
+    environment: staging # dev, qa, production
+    tier: database       # frontend, backend, cache
+    partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
   selector:
     component: elasticsearch
