--- a/catalog/elk/kubernetes/kibana/kibana-service.yaml
+++ b/catalog/elk/kubernetes/kibana/kibana-service.yaml
@@ -1,21 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch
+  name: kibana-internal-lb
   labels:
     app: elk
-    component: elasticsearch
-    role: client
+    component: kibana-internal-lb
+    role: load-balancer
     release: stable      # canary
     environment: staging # dev, qa, production
-    tier: database       # frontend, backend, cache
+    tier: frontend       # frontend, backend, cache
     partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
-  # type: LoadBalancer
   selector:
-    component: elasticsearch
-    role: client
+    app: elk
+    component: kibana
   ports:
-  - name: http
-    port: 9200
+  - port: 5601
+    name: http
     protocol: TCP
+    targetPort: 5601
