--- a/catalog/elk/kubernetes/logstash/filebeat-container-configmap.yaml
+++ b/catalog/elk/kubernetes/logstash/filebeat-container-configmap.yaml
@@ -22,4 +22,4 @@ data:
           document_type: kube_logs
     output:  
       logstash:
-        hosts: ["logstash.default.svc.cluster.local:5044"]
+        hosts: ["logstash:5044"]
