--- a/catalog/elk/kubernetes/kibana/kibana-deployment.yaml
+++ b/catalog/elk/kubernetes/kibana/kibana-deployment.yaml
@@ -27,7 +27,7 @@ spec:
             memory: 200Mi
         env:
           - name: ELASTICSEARCH_URL
-            value: "http://elasticsearch.default.svc.cluster.local:9200"
+            value: "http://elasticsearch:9200"
         ports:
           - name: http
             containerPort: 5601
