--- a/catalog/elk/kubernetes/logstash/logstash-configmap.yaml
+++ b/catalog/elk/kubernetes/logstash/logstash-configmap.yaml
@@ -116,6 +116,6 @@ data:
 
     output {
       elasticsearch { 
-        hosts => ["elasticsearch.default.svc.cluster.local:9200"]
+        hosts => ["elasticsearch:9200"]
       }
     }
