--- a/storage-class/minikube-storage-class.yaml
+++ b/storage-class/minikube-storage-class.yaml
@@ -1,11 +1,9 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
-  name: aws-ebs-encrypted-ssd
+  name: ssd-encrypted
+  labels:
+    kubernetes.io/cluster-service: "true"
   annotations:
     storageclass.beta.kubernetes.io/is-default-class: "true"
-provisioner: kubernetes.io/aws-ebs
-parameters:
-  type: gp2
-  zone: "us-east-1a"
-  encrypted: "true"
+provisioner: k8s.io/minikube-hostpath
