--- a/catalog/couchdb/kubernetes/public-lb/couchdb-public-lb-service.minikube.yaml
+++ b/catalog/couchdb/kubernetes/public-lb/couchdb-public-lb-service.minikube.yaml
@@ -1,22 +1,21 @@
-# Ensures individual Pets get their own DNS entries
 apiVersion: v1
 kind: Service
 metadata:
-  name: couchdb-cluster
+  name: couchdb-public-load-balancer
   labels:
     app: nosql
-    component: couchdb
-    role: load-balancer
+    component: load-balancer
+    role: public-load-balancer
     release: stable      # stable, canary, alpha, beta, experimental, latest, debug
     environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
   type: NodePort
-  ports:
-  - name: http
-    port: 5984
-    nodePort: 30984
   selector:
     app: nosql
-    component: couchdb
-    role: master
+    component: nginx
+  ports:
+  - port: 80
+    name: http
+    protocol: TCP
+    nodePort: 30985
