--- a/catalog/elk/kubernetes/cerebro/cerebro-service.yaml
+++ b/catalog/elk/kubernetes/cerebro/cerebro-service.yaml
@@ -4,24 +4,18 @@ metadata:
   name: cerebro
   labels:
     app: elk
-    component: oauth-proxy
+    component: cerebro
     role: load-balancer
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: daemon         # frontend, backend, cache
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
-  annotations:
-    # AWS Managed cert ARN
-    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
-    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
 spec:
+  type: NodePort
   selector:
     app: elk
     component: cerebro
   ports:
-  - port: 80          # use   443     if you use an SSL Cert managed by AWS
+  - port: 9000
     name: http        # use   https   if you use an SSL Cert managed by AWS
+    nodePort: 32001
     protocol: TCP
-    targetPort: 9000
-  sessionAffinity: None
-  type: LoadBalancer
