--- a/catalog/elk/kubernetes/es-client-statefulset.yaml
+++ b/catalog/elk/kubernetes/es-client-statefulset.yaml
@@ -11,9 +11,8 @@ spec:
         app: elk
         component: elasticsearch
         role: client
-        release: stable      # canary
-        environment: staging # dev, qa, production
-        tier: database       # frontend, backend, cache
+        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+        environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
       annotations:
         pod.beta.kubernetes.io/init-containers: '[
@@ -43,7 +42,7 @@ spec:
             fieldRef:
               fieldPath: metadata.namespace
         - name: "CLUSTER_NAME"
-          value: "myesdb"
+          value: "diagnostic"
         - name: NODE_MASTER
           value: "false"
         - name: NODE_DATA
