--- a/catalog/elk/kubernetes/es-discovery-svc.yaml
+++ b/catalog/elk/kubernetes/es-discovery-svc.yaml
@@ -5,10 +5,9 @@ metadata:
   labels:
     app: elk
     component: elasticsearch
-    role: master
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: database       # frontend, backend, cache
+    role: es-master-discovery
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
   selector:
