--- a/catalog/elk/kubernetes/es-svc.yaml
+++ b/catalog/elk/kubernetes/es-svc.yaml
@@ -5,13 +5,12 @@ metadata:
   labels:
     app: elk
     component: elasticsearch
-    role: client
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: database       # frontend, backend, cache
+    role: es-client-load-balancer
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
-  # type: LoadBalancer
+  type: NodePort
   selector:
     component: elasticsearch
     role: client
@@ -19,3 +18,4 @@ spec:
   - name: http
     port: 9200
     protocol: TCP
+    nodePort: 32000 # MiniKube
