--- a/catalog/elk/kubernetes/kibana/kibana-deployment.yaml
+++ b/catalog/elk/kubernetes/kibana/kibana-deployment.yaml
@@ -10,10 +10,9 @@ spec:
       labels:
         app: elk
         component: kibana
-        role: ui
-        release: stable      # canary
-        environment: staging # dev, qa, production
-        tier: frontend       # frontend, backend, cache
+        role: dashboard
+        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+        environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
     spec:
       containers:
