--- a/catalog/elk/kubernetes/kopf/kopf-service.yaml
+++ b/catalog/elk/kubernetes/kopf/kopf-service.yaml
@@ -4,24 +4,17 @@ metadata:
   name: kopf
   labels:
     app: elk
-    component: oauth-proxy
+    component: kopf
     role: load-balancer
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: daemon         # frontend, backend, cache
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
-  annotations:
-    # AWS Managed cert ARN
-    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
-    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
 spec:
   selector:
     app: elk
     component: kopf
   ports:
-  - port: 80          # use   443     if you use an SSL Cert managed by AWS
-    name: http        # use   https   if you use an SSL Cert managed by AWS
+  - port: 8080
+    name: http
     protocol: TCP
-    targetPort: 8080
-  sessionAffinity: None
-  type: LoadBalancer
+ 
