--- a/catalog/elk/kubernetes/logstash/filebeat-container-configmap.yaml
+++ b/catalog/elk/kubernetes/logstash/filebeat-container-configmap.yaml
@@ -2,14 +2,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: filebeat-container
+  name: filebeat-container-logs
   labels:
     app: elk
-    component: filebeat-container
-    role: collect-container-log
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: daemon         # frontend, backend, cache
+    component: filebeat
+    role: collect-container-logs
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 data:
   filebeat.yml: |-
