--- a/secret-templates/kibana-oauth-google-secret.yaml
+++ b/secret-templates/kibana-oauth-google-secret.yaml
@@ -5,10 +5,9 @@ metadata:
   labels:
     app: elk
     component: kibana
-    role: ui
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: frontend       # frontend, backend, cache
+    role: dashboard
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 type: Opaque
 data:
