[couchdb] Securing Couchdb to be internet facing

--- a/catalog/couchdb/kubernetes/couchdb-statefulset.yaml
+++ b/catalog/couchdb/kubernetes/couchdb-statefulset.yaml
@@ -124,8 +124,8 @@ spec:
   - metadata:
       name: data
       annotations:
-        volume.beta.kubernetes.io/storage-class: aws-ebs-encrypted-ssd
-        # volume.alpha.kubernetes.io/storage-class: ebs-ssd-encrypted
+        # volume.beta.kubernetes.io/storage-class: aws-ebs-encrypted-ssd
+        volume.alpha.kubernetes.io/storage-class: anything        
     spec:
       accessModes:
       - ReadWriteOnce
