--- a/secret-templates/jenkins-secret.yaml
+++ b/secret-templates/jenkins-secret.yaml
@@ -3,12 +3,11 @@ kind: Secret
 metadata:
   name: jenkins
   labels:
-    app: jenkins
+    app: continuous-integration
     component: jenkins
     role: master
-    release: stable      # canary
-    environment: staging # dev, qa, production
-    tier: ci             # frontend, backend, cache
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 type: Opaque
 data:
