--- a/catalog/jenkins/kubernetes/jenkins-service.aws.yaml
+++ b/catalog/jenkins/kubernetes/jenkins-service.aws.yaml
@@ -1,42 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins
-  namespace: ci
+  name: jenkins-cluster
   labels:
+    app: continuous-integration
     component: jenkins
-    role: master
+    role: load-balancer
+    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
+    environment: dev     # dev, staging, qa, production
+    partition: all       # customer_1, customer_2, developer_1, beta_release
   annotations:
     # AWS Managed cert ARN
     # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
     # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
 spec:
+  type: LoadBalancer
+  sessionAffinity: None
   selector:
-    app: ci
+    app: continuous-integration
     component: jenkins
     role: master
   ports:
   - port: 80          # use   443     if you use an SSL Cert managed by AWS
-    name: web-ui
+    name: http
     protocol: TCP
     targetPort: 8080
-  sessionAffinity: None
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jenkins-discovery
-  namespace: ci
-  labels:
-    component: jenkins
-    role: master
-spec:
-  selector:
-    app: ci
-    component: jenkins
-  ports:
-  - port: 50000
-    name: slaves
-    protocol: TCP
-    targetPort: 50000
