--- a/catalog/elk/kubernetes/cerebro/cerebro-deployment.yaml
+++ b/catalog/elk/kubernetes/cerebro/cerebro-deployment.yaml
@@ -10,7 +10,7 @@ spec:
       labels:
         app: elk
         component: cerebro
-        role: ui-management
+        role: management
         release: stable      # stable, canary, alpha, beta, experimental, latest, debug
         environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: cerebro
         imagePullPolicy: Always # IfNotPresent, Always, Never
-        image: yannart/cerebro:latest
+        image: yannart/cerebro:0.6.1
         resources:
           limits:
             memory: 512Mi
