--- a/catalog/elk/kubernetes/logstash/filebeat-container-daemonset.minikube.yaml
+++ b/catalog/elk/kubernetes/logstash/filebeat-container-daemonset.minikube.yaml
@@ -1,21 +1,21 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: filebeat-log
+  name: filebeat-container
 spec:
   template:
     metadata:
-      name: filebeat-system-logs
+      name: filebeat-container-logs
       labels:
         app: elk
         component: filebeat
-        role: collect-system-logs
+        role: collect-container-logs
         release: stable      # stable, canary, alpha, beta, experimental, latest, debug
         environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
     spec:
       containers:
-      - name: filebeat
+      - name: filebeat-container
         imagePullPolicy: Always
         image: hbouvier/filebeat-kubernetes:1.2.3
         resources:
@@ -26,17 +26,24 @@ spec:
             memory: 200Mi
         volumeMounts:
         - name: varlog
-          mountPath: /var/log
+          mountPath: /var/log/containers
+        - name: varlibdockercontainers
+          # mountPath: /var/lib/docker/containers         # AWS
+          mountPath: /mnt/sda1/var/lib/docker/containers  # MiniKube
+          readOnly: true
         - name: filebeat-config-dir
           mountPath: /etc/filebeat/
       terminationGracePeriodSeconds: 30
       volumes:
       - name: varlog
         hostPath:
-          path: /var/log
+          path: /var/log/containers
+      - name: varlibdockercontainers
+        hostPath:
+          path: /var/lib/docker/containers
       - name: filebeat-config-dir
         configMap:
-          name: filebeat-system-logs
+          name: filebeat-container-logs
           items:
           - key: filebeat.yml
             path: filebeat.yml
