--- a/catalog/jenkins/kubernetes/jenkins-deployment.yaml
+++ b/catalog/jenkins/kubernetes/jenkins-deployment.yaml
@@ -13,18 +13,18 @@ spec:
         release: stable      # stable, canary, alpha, beta, experimental, latest, debug
         environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
-      annotations:
-        pod.beta.kubernetes.io/init-containers: '[
-          {
-          "name": "chown",
-            "image": "busybox",
-            "imagePullPolicy": "IfNotPresent",
-            "command": ["/bin/sh", "-c", "mkdir -p /var/jenkins_home && chown 1000:1000 /var/jenkins_home"],
-            "securityContext": {
-              "privileged": true
-            }
-          }
-        ]'
+      # annotations:
+      #   pod.beta.kubernetes.io/init-containers: '[
+      #     {
+      #     "name": "chown",
+      #       "image": "busybox",
+      #       "imagePullPolicy": "IfNotPresent",
+      #       "command": ["/bin/sh", "-c", "mkdir -p /var/jenkins_home && chown 1000:1000 /var/jenkins_home"],
+      #       "securityContext": {
+      #         "privileged": true
+      #       }
+      #     }
+      #   ]'
     spec:
       containers:
       - name: master
