--- a/catalog/couchdb/kubernetes/curator/couchdb-curator-global_changes.yaml
+++ b/catalog/couchdb/kubernetes/curator/couchdb-curator-global_changes.yaml
@@ -11,7 +11,16 @@ spec:
           containers:
           - name: curator
             image: busybox
-            args: ["curl", "-u", "${COUCHDB_USER}:${COUCHDB_PASSWORD}", -v", -H", "Content-Type: application/json", "-X", "POST", "http://couchdb-cluster:5984/_global_changes/_compact"]
+            args: 
+            - curl
+            - -u
+            - "${COUCHDB_USER}:${COUCHDB_PASSWORD}"
+            - -v
+            - -H
+            - "Content-Type: application/json"
+            - -X
+            - POST
+            - "http://couchdb-cluster:5984/_global_changes/_compact"
             env:
             - name: COUCHDB_USER
               valueFrom:
