--- a/catalog/rabbitmq/kubernetes/rabbitmq-service.aws.yaml
+++ b/catalog/rabbitmq/kubernetes/rabbitmq-service.aws.yaml
@@ -9,12 +9,18 @@ metadata:
     release: stable      # stable, canary, alpha, beta, experimental, latest, debug
     environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
+  annotations:
+    # AWS Managed cert ARN
+    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
+    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
 spec:
-  type: NodePort
+  type: LoadBalancer
+  sessionAffinity: None
   selector:
     app: message-bus
     component: rabbitmq
   ports:
-  - port: 15672
-    name: http
-    nodePort: 31672
+  - name: http
+    port: 80
+    protocol: TCP
+    targetPort: 15672
