--- a/catalog/rabbitmq/kubernetes/rabbitmq-service.yaml
+++ b/catalog/rabbitmq/kubernetes/rabbitmq-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq-management
+  name: rabbitmq-cluster
   labels:
     app: message-bus
     component: rabbitmq
@@ -10,11 +10,9 @@ metadata:
     environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
 spec:
-  type: NodePort
+  ports:
+  - port: 5672
+    name: data
   selector:
     app: message-bus
     component: rabbitmq
-  ports:
-  - port: 15672
-    name: http
-    nodePort: 31672
