--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.stash
 secrets/*.yaml
 secrets/*.yml
+secrets/*.sh
 JOURNAL.md
 /catalog/couchdb/bootstrap/node_modules/
 /catalog/couchdb/bootstrap/coverage/
