[ingress] Added ingress to minikube

--- a/catalog/elk/kubernetes/cerebro/cerebro-configmap.yaml
+++ b/catalog/elk/kubernetes/cerebro/cerebro-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: elk
     component: cerebro
-    role: ui-management
+    role: management
     release: stable      # stable, canary, alpha, beta, experimental, latest, debug
     environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
