--- a/catalog/elk/kubernetes/kopf/kopf-deployment.yaml
+++ b/catalog/elk/kubernetes/kopf/kopf-deployment.yaml
@@ -10,7 +10,7 @@ spec:
       labels:
         app: elk
         component: kopf
-        role: ui-management
+        role: management
         release: stable      # stable, canary, alpha, beta, experimental, latest, debug
         environment: dev     # dev, staging, qa, production
         partition: all       # customer_1, customer_2, developer_1, beta_release
