--- a/catalog/elk/kubernetes/kopf/kopf-service.minikube.yaml
+++ b/catalog/elk/kubernetes/kopf/kopf-service.minikube.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cerebro
+  name: kopf
   labels:
     app: elk
-    component: cerebro
+    component: kopf
     role: management
     release: stable      # stable, canary, alpha, beta, experimental, latest, debug
     environment: dev     # dev, staging, qa, production
@@ -12,8 +12,9 @@ metadata:
 spec:
   selector:
     app: elk
-    component: cerebro
+    component: kopf
   ports:
-  - port: 9000
+  - port: 8080
     name: http
     protocol: TCP
+ 
