--- a/catalog/ingress/kubernetes/samples/sample-ping-configmap.yaml
+++ b/catalog/ingress/kubernetes/samples/sample-ping-configmap.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
-kind: Service
+kind: ConfigMap
 metadata:
-  name: kopf
+  name: sample-ping-config
   labels:
-    app: elk
-    component: kopf
-    role: load-balancer
+    app: ping
+    component: ping
+    role: sample-ping-config
     release: stable      # stable, canary, alpha, beta, experimental, latest, debug
     environment: dev     # dev, staging, qa, production
     partition: all       # customer_1, customer_2, developer_1, beta_release
-spec:
-  selector:
-    app: elk
-    component: kopf
-  ports:
-  - port: 8080
-    name: http
-    protocol: TCP
- 
+data:
+  default.conf: |-
+    server {
+      listen       80;
+
+      location /ping {
+        return 200 'pong';
+      }
+    }
