--- a/catalog/jenkins/kubernetes/jenkins-master-pvc.yaml
+++ b/catalog/jenkins/kubernetes/jenkins-master-pvc.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 metadata:
   name: jenkins-home
   annotations:
-    # volume.beta.kubernetes.io/storage-class: aws-ebs-encrypted-ssd
-    volume.alpha.kubernetes.io/storage-class: ssd-encrypted        
+    volume.beta.kubernetes.io/storage-class: ssd-encrypted
+    volume.alpha.kubernetes.io/storage-class: ssd-encrypted
 spec:
   accessModes:
   - ReadWriteOnce
